--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "dist/index.js",
     "scripts": {
         "prebuild": "npm run clearDistDirectory",
-        "build": "tsc --project tsconfig.json && tscpaths -p tsconfig.json -s ./src -o ./dist",
+        "build": "tsc",
         "prestart": "npm run build",
         "start": "node .",
         "dev": "nodemon",
@@ -30,8 +30,10 @@
         "crypto-js": "^4.0.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "express-validator": "^6.10.0",
+        "express-validator": "^6.12.0",
         "faker": "^5.4.0",
+        "inversify": "^5.1.1",
+        "inversify-express-utils": "^6.3.2",
         "jsonwebtoken": "^8.5.1",
         "module-alias": "^2.2.2",
         "moment": "^2.29.1",
@@ -41,13 +43,17 @@
         "node-schedule": "^2.0.0",
         "nodemailer": "^6.5.0",
         "nodemon": "^2.0.7",
+        "passport": "^0.4.1",
+        "passport-jwt": "^4.0.0",
         "reflect-metadata": "^0.1.13",
         "request": "^2.88.2",
         "rimraf": "^3.0.2",
+        "sha256": "^0.2.0",
         "slugify": "^1.4.7",
         "ts-node": "^9.1.1",
         "typeorm": "^0.2.31",
-        "typescript": "^4.2.3"
+        "typescript": "^4.2.3",
+        "winston": "^3.3.3"
     },
     "devDependencies": {
         "@types/bcrypt": "^3.0.0",
@@ -57,10 +63,12 @@
         "@types/express": "^4.17.11",
         "@types/faker": "^5.1.7",
         "@types/jsonwebtoken": "^8.5.0",
-        "@types/morgan": "^1.9.2",
+        "@types/morgan": "^1.9.3",
         "@types/node": "^14.14.31",
         "@types/node-schedule": "^1.3.1",
         "@types/nodemailer": "^6.4.0",
+        "@types/passport-jwt": "^3.0.6",
+        "@types/sha256": "^0.2.0",
         "@types/web-push": "^3.3.0",
         "@typescript-eslint/eslint-plugin": "4.28.2",
         "@typescript-eslint/parser": "4.28.2",
@@ -75,23 +83,6 @@
         "prettier": "^2.3.2",
         "tsconfig-paths": "^3.9.0",
         "tscpaths": "^0.0.9"
-    },
-    "_moduleAliases": {
-        "@config": "dist/config",
-        "@controllers": "dist/controllers",
-        "@enums": "dist/enums",
-        "@interfaces": "dist/interfaces",
-        "@middlewares": "dist/middlewares",
-        "@migrations": "dist/migrations",
-        "@entities": "dist/entities",
-        "@respositories": "dist/respositories",
-        "@routes": "dist/routes",
-        "@services": "dist/services",
-        "@subscribers": "dist/subscribers",
-        "@utils": "dist/utils"
-    },
-    "alias-hq": {
-        "prefix": "cfg"
     },
     "husky": {
         "hooks": {
