--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "author": "Perez Alan",
     "license": "ISC",
     "dependencies": {
+        "api-problem": "^7.0.2",
         "axios": "^0.21.1",
-        "bcrypt": "^5.0.1",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "crypto-js": "^4.0.0",
@@ -32,11 +32,7 @@
         "express": "^4.17.1",
         "express-validator": "^6.12.0",
         "faker": "^5.4.0",
-        "inversify": "^5.1.1",
-        "inversify-express-utils": "^6.3.2",
         "jsonwebtoken": "^8.5.1",
-        "module-alias": "^2.2.2",
-        "moment": "^2.29.1",
         "morgan": "^1.10.0",
         "multer": "^1.4.2",
         "mysql": "^2.18.1",
@@ -48,18 +44,19 @@
         "reflect-metadata": "^0.1.13",
         "request": "^2.88.2",
         "rimraf": "^3.0.2",
+        "routing-controllers": "^0.9.0",
         "sha256": "^0.2.0",
         "slugify": "^1.4.7",
         "ts-node": "^9.1.1",
+        "typedi": "^0.10.0",
         "typeorm": "^0.2.31",
+        "typeorm-typedi-extensions": "^0.4.1",
         "typescript": "^4.2.3",
         "winston": "^3.3.3"
     },
     "devDependencies": {
-        "@types/bcrypt": "^3.0.0",
         "@types/bcryptjs": "^2.4.2",
         "@types/cors": "^2.8.10",
-        "@types/crypto-js": "^4.0.1",
         "@types/express": "^4.17.11",
         "@types/faker": "^5.1.7",
         "@types/jsonwebtoken": "^8.5.0",
@@ -69,20 +66,15 @@
         "@types/nodemailer": "^6.4.0",
         "@types/passport-jwt": "^3.0.6",
         "@types/sha256": "^0.2.0",
-        "@types/web-push": "^3.3.0",
         "@typescript-eslint/eslint-plugin": "4.28.2",
         "@typescript-eslint/parser": "4.28.2",
-        "alias-hq": "^5.1.6",
         "eslint": "7.30.0",
         "eslint-config-airbnb-base": "^14.2.1",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.23.4",
         "eslint-plugin-prettier": "^3.4.0",
         "husky": "7.0.1",
-        "lint-staged": "11.0.0",
-        "prettier": "^2.3.2",
-        "tsconfig-paths": "^3.9.0",
-        "tscpaths": "^0.0.9"
+        "prettier": "^2.3.2"
     },
     "husky": {
         "hooks": {
